--- a/Laba6_7/MainWindow.xaml
+++ b/Laba6_7/MainWindow.xaml
@@ -1,10 +1,13 @@
 ﻿<Window x:Class="ExpressionCalculatorWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Калькулятор ОПЗ" Height="400" Width="650">
+        Title="Калькулятор ОПЗ" Height="550" Width="800">
     <StackPanel Margin="10">
         <Grid Margin="0,0,0,20">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -18,13 +21,13 @@
             <!-- Подпись и поле ввода для математического выражения -->
             <Label Content="Введите математическое выражение:" Grid.Row="0" Grid.Column="0" Margin="0,8,8,0" 
                    FontFamily="Constantia" FontSize="14"/>
-            <TextBox x:Name="InputExpression" Grid.Row="0" Grid.Column="1" Width="360" Height="30" Margin="0,5,0,0" 
+            <TextBox x:Name="InputExpression" Grid.Row="0" Grid.Column="1" Width="500" Height="30" Margin="0,5,0,0" 
                      ToolTip="Введите выражение, используйте 'x' как переменную"/>
 
             <!-- Подпись и поле ввода для значения переменной x -->
             <Label Content="Введите значение переменной x:" Grid.Row="1" Grid.Column="0" Margin="0,8,8,0" 
                    FontFamily="Constantia" FontSize="14"/>
-            <TextBox x:Name="InputXValue" Grid.Row="1" Grid.Column="1" Width="360" Height="30" Margin="0,5,0,0" 
+            <TextBox x:Name="InputXValue" Grid.Row="1" Grid.Column="1" Width="500" Height="30" Margin="0,5,0,0" 
                      ToolTip="Значение переменной x"/>
 
             <!-- Кнопка для выполнения вычислений -->
@@ -33,10 +36,25 @@
                     HorizontalAlignment="Left" Click="Calculate_Click"/>
 
             <!-- Поле для вывода результата -->
-            <Label x:Name="ResultLabel" Content="Результат:" Grid.Row="3" Grid.Column="0" Margin="0,10,8,0" 
+            <Label Content="Результат:" Grid.Row="3" Grid.Column="0" Margin="0,10,8,0" 
                    FontFamily="Constantia" FontSize="14"/>
-            <TextBox x:Name="OutputResult" Grid.Row="3" Grid.Column="1" Width="360" Height="30" Margin="0,10,0,0" 
-                     IsReadOnly="True"/>
+            <TextBox x:Name="OutputResult" Grid.Row="3" Grid.Column="1" Width="500" Height="30" Margin="0,10,0,0" 
+                     IsReadOnly="True" ToolTip="Результат выражения"/>
+
+            <!-- Поле для вывода ошибок -->
+            <Label Content="Сообщение об ошибке:" Grid.Row="4" Grid.Column="0" Margin="0,10,8,0" 
+                   FontFamily="Constantia" FontSize="14"/>
+            <TextBox x:Name="ErrorMessage" Grid.Row="4" Grid.Column="1" Width="500" Height="30" Margin="0,10,0,0" 
+                     IsReadOnly="True" ToolTip="Сообщение об ошибке"/>
+
+            <!-- Пояснительный текст с поддерживаемыми операторами -->
+            <TextBlock Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,10,0,0" Width="410" TextWrapping="Wrap"
+                       FontFamily="Constantia" FontSize="12" TextAlignment="Left" HorizontalAlignment="Left">
+                <TextBlock.Text>
+                    Поддерживаемые операторы и функции: +, -, *, /, ^ (возведение в степень), rt (корень),
+                    log (логарифм), sqrt (квадратный корень), sin, cos, tg, ctg.
+                </TextBlock.Text>
+            </TextBlock>
         </Grid>
     </StackPanel>
 </Window>
