--- a/Laba6_7/MainWindow.xaml
+++ b/Laba6_7/MainWindow.xaml
@@ -15,19 +15,19 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/> <!-- Использование звездочки для растяжения по доступной ширине -->
             </Grid.ColumnDefinitions>
 
             <!-- Подпись и поле ввода для математического выражения -->
             <Label Content="Введите математическое выражение:" Grid.Row="0" Grid.Column="0" Margin="0,8,8,0" 
                    FontFamily="Constantia" FontSize="14"/>
-            <TextBox x:Name="InputExpression" Grid.Row="0" Grid.Column="1" Width="500" Height="30" Margin="0,5,0,0" 
+            <TextBox x:Name="InputExpression" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,5,0,0" 
                      ToolTip="Введите выражение, используйте 'x' как переменную"/>
 
             <!-- Подпись и поле ввода для значения переменной x -->
             <Label Content="Введите значение переменной x:" Grid.Row="1" Grid.Column="0" Margin="0,8,8,0" 
                    FontFamily="Constantia" FontSize="14"/>
-            <TextBox x:Name="InputXValue" Grid.Row="1" Grid.Column="1" Width="500" Height="30" Margin="0,5,0,0" 
+            <TextBox x:Name="InputXValue" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,5,0,0" 
                      ToolTip="Значение переменной x"/>
 
             <!-- Кнопка для выполнения вычислений -->
@@ -38,13 +38,13 @@
             <!-- Поле для вывода результата -->
             <Label Content="Результат:" Grid.Row="3" Grid.Column="0" Margin="0,10,8,0" 
                    FontFamily="Constantia" FontSize="14"/>
-            <TextBox x:Name="OutputResult" Grid.Row="3" Grid.Column="1" Width="500" Height="30" Margin="0,10,0,0" 
+            <TextBox x:Name="OutputResult" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,10,0,0" 
                      IsReadOnly="True" ToolTip="Результат выражения"/>
 
             <!-- Поле для вывода ошибок -->
             <Label Content="Сообщение об ошибке:" Grid.Row="4" Grid.Column="0" Margin="0,10,8,0" 
                    FontFamily="Constantia" FontSize="14"/>
-            <TextBox x:Name="ErrorMessage" Grid.Row="4" Grid.Column="1" Width="500" Height="30" Margin="0,10,0,0" 
+            <TextBox x:Name="ErrorMessage" Grid.Row="4" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,10,0,0" 
                      IsReadOnly="True" ToolTip="Сообщение об ошибке"/>
 
             <!-- Пояснительный текст с поддерживаемыми операторами -->
