--- a/Laba6-9/MainWindow.xaml
+++ b/Laba6-9/MainWindow.xaml
@@ -15,44 +15,49 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/> <!-- Использование звездочки для растяжения по доступной ширине -->
+                <ColumnDefinition Width="*"/> 
             </Grid.ColumnDefinitions>
 
-            <!-- Подпись и поле ввода для математического выражения -->
+            
             <Label Content="Введите математическое выражение:" Grid.Row="0" Grid.Column="0" Margin="0,8,8,0" 
                    FontFamily="Constantia" FontSize="14"/>
             <TextBox x:Name="InputExpression" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,5,0,0" 
                      ToolTip="Введите выражение, используйте 'x' как переменную"/>
 
-            <!-- Подпись и поле ввода для значения переменной x -->
+           
             <Label Content="Введите значение переменной x:" Grid.Row="1" Grid.Column="0" Margin="0,8,8,0" 
                    FontFamily="Constantia" FontSize="14"/>
             <TextBox x:Name="InputXValue" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,5,0,0" 
                      ToolTip="Значение переменной x"/>
 
-            <!-- Кнопка для выполнения вычислений -->
+           
             <Button Content="Вычислить" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Width="200" Margin="0,10,0,0" 
                     FontFamily="Constantia" FontSize="14"
                     HorizontalAlignment="Left" Click="Calculate_Click"/>
 
-            <!-- Поле для вывода результата -->
+           
             <Label Content="Результат:" Grid.Row="3" Grid.Column="0" Margin="0,10,8,0" 
                    FontFamily="Constantia" FontSize="14"/>
             <TextBox x:Name="OutputResult" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,10,0,0" 
                      IsReadOnly="True" ToolTip="Результат выражения"/>
 
-            <!-- Поле для вывода ошибок -->
+           
             <Label Content="Сообщение об ошибке:" Grid.Row="4" Grid.Column="0" Margin="0,10,8,0" 
                    FontFamily="Constantia" FontSize="14"/>
             <TextBox x:Name="ErrorMessage" Grid.Row="4" Grid.Column="1" HorizontalAlignment="Stretch" Margin="0,10,0,0" 
                      IsReadOnly="True" ToolTip="Сообщение об ошибке"/>
 
-            <!-- Пояснительный текст с поддерживаемыми операторами -->
+           
             <TextBlock Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,10,0,0" Width="410" TextWrapping="Wrap"
                        FontFamily="Constantia" FontSize="12" TextAlignment="Left" HorizontalAlignment="Left">
                 <TextBlock.Text>
-                    Поддерживаемые операторы и функции: +, -, *, /, ^ (возведение в степень), rt (корень),
-                    log (логарифм), sqrt (квадратный корень), sin, cos, tg, ctg.
+                    Поддерживаемые операторы и функции: &#x0a;
+                    1. +, -, *, / — сложение, вычитание, умножение, деление; &#x0a;
+                    2. log(a, b) - логарифм по основанию a от числа b; &#x0a;
+                    3. a^b - возведение числа a в степень b; &#x0a;
+                    4. sqrt(a) - получение квадратного корня из числа a; &#x0a;
+                    5. rt(a, b) - получение корня степени b из числа a; &#x0a;
+                    6. sin(x), cos(x), tg(x), ctg(x).
                 </TextBlock.Text>
             </TextBlock>
         </Grid>
